usr.sbin/pw/pw_user.c
@@ -6365,6 +6365,8 @@ specifier|const
 name|char
 modifier|*
 name|cfg
+init|=
+name|NULL
 decl_stmt|;
 name|login_cap_t
 modifier|*
@@ -7272,6 +7274,17 @@ argument_list|,
 name|name
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|grname
+condition|)
+name|grname
+operator|=
+name|cmdcnf
+operator|->
+name|default_group
+expr_stmt|;
 name|pwd
 operator|=
 operator|&
@@ -8091,6 +8104,8 @@ specifier|const
 name|char
 modifier|*
 name|cfg
+init|=
+name|NULL
 decl_stmt|;
 name|char
 modifier|*
